--- a/css/login.css
+++ b/css/login.css
@@ -20,10 +20,10 @@
   box-shadow: 0 0 10px 1px #ddd;
   height: 400px;
 }
-#login-selector > img {
+#login-selector > i {
   width: 28px;
   margin-bottom: 3rem;
-  padding-top: 3rem;
+  padding-top: 2rem;
 }
 #login-selector > div > div {
   position: relative;
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
-  padding: 30px 20px;
+  padding: 26px 16px;
   cursor: pointer;
 }
 #login-selector > div > div:before {
@@ -50,8 +50,9 @@
   height: 100%;
   transition: 0.2s all;
 }
-#login-selector > div > div img {
-  width: 30px;
+#login-selector > div > div i {
+  display: inline-block;
+  width: 34px;
   margin-bottom: 1rem;
 }
 #login-selector > div > div span {
@@ -61,6 +62,7 @@
 #login-main > div {
   position: relative;
   display: none;
+  transition: 0.3s all;
 }
 #login-main > div.active {
   display: block;
@@ -144,18 +146,54 @@
   overflow: hidden;
 }
 #login-entry > div[data-type=sign-in] > .info {
-  font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
-#login-entry > div[data-type=sign-in] > .info a {
-  text-decoration: none;
+#login-entry > div[data-type=sign-in] > .info h1 {
+  font-size: 18px;
+  margin: 0;
+  width: 70px;
+}
+#login-entry > div[data-type=sign-in] > .info span {
+  font-size: 11px;
+  color: var(--error-color);
+  width: calc(100% - 70px);
+  text-align: right;
 }
 #login-entry > div[data-type=sign-in] > .form div {
   font-size: 14px;
   margin-top: 1rem;
+  position: relative;
 }
 #login-entry > div[data-type=sign-in] > .form div label {
   display: block;
   font-weight: 500;
+}
+#login-entry > div[data-type=sign-in] > .form div span {
+  position: absolute;
+  right: 0;
+  font-size: 11px;
+  color: var(--error-color);
+}
+#login-entry > div[data-type=sign-in] > .form div input[type=email]:before {
+  content: "";
+}
+#login-entry > div[data-type=sign-in] > .form div input[type=password]:before {
+  content: "";
+}
+#login-entry > div[data-type=sign-in] > .form div button {
+  font-size: 10px;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  float: right;
+  margin-top: 4px;
+  color: var(--primary-color);
+  cursor: pointer;
 }
 #login-entry > div[data-type=sign-in] > .button {
   display: flex;
@@ -165,21 +203,28 @@
 }
 #login-entry > div[data-type=sign-in] > .button button {
   width: 100%;
+  height: 35px;
   background-color: #201568;
   color: #fff;
   border: 0;
   padding: 10px;
   border-radius: 0.25rem;
+  cursor: pointer;
+}
+#login-entry > div[data-type=sign-in] > .button button i {
+  display: inline-block;
+  width: 24px;
+  margin-top: -5px;
 }
 #login-entry > div[data-type=sign-in] > .button a {
-  width: 35px;
+  width: 45px;
   height: 35px;
   border: 1px solid #20156817;
   border-radius: 0.25rem;
   margin-left: 15px;
-  padding: 4px;
+  padding: 4px 5px;
 }
-#login-entry > div[data-type=sign-in] > .button a img {
+#login-entry > div[data-type=sign-in] > .button a i {
   width: 26px;
   height: 26px;
 }
