--- a/css/login.scss
+++ b/css/login.scss
@@ -21,10 +21,10 @@
     box-shadow: 0 0 10px 1px #ddd;
     height: 400px;
 
-    > img {
+    > i {
         width: 28px;
         margin-bottom: 3rem;
-        padding-top: 3rem;
+        padding-top: 2rem;
     }
 
     > div {
@@ -36,7 +36,7 @@
             justify-content: center;
             align-items: center;
             margin-bottom: 1rem;
-            padding: 30px 20px;
+            padding: 26px 16px;
             cursor: pointer;
 
             &:before {
@@ -57,8 +57,9 @@
                 }
             }
 
-            img {
-                width: 30px;
+            i {
+                display: inline-block;
+                width: 34px;
                 margin-bottom: 1rem;
             }
 
@@ -73,6 +74,7 @@
     > div {
         position: relative;
         display: none;
+        transition: .3s all;
 
         &.active {
             display: block;
@@ -175,25 +177,59 @@
 
     > div[data-type="sign-in"] {
         > .info {
-            font-size: 14px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0;
+            margin-top: 0;
+            margin-bottom: 30px;
 
-            span {
+            h1 {
+                font-size: 18px;
+                margin: 0;
+                width: 70px;
             }
-            a {
-                text-decoration: none;
+            span {
+                font-size: 11px;
+                color: var(--error-color);
+                width: calc(100% - 70px);
+                text-align: right;
             }
         }
         > .form {
             div {
                 font-size: 14px;
                 margin-top: 1rem;
+                position: relative;
 
                 label {
                     display: block;
                     font-weight: 500;
                 }
+                span {
+                    position: absolute;
+                    right: 0;
+                    font-size: 11px;
+                    color: var(--error-color);
+                }
                 input {
 
+                }
+                input[type="email"]:before {
+                    content:'';
+                }
+                input[type="password"]:before {
+                    content:'';
+                }
+                button {
+                    font-size: 10px;
+                    background: transparent;
+                    border: 0;
+                    padding: 0;
+                    float: right;
+                    margin-top: 4px;
+                    color: var(--primary-color);
+                    cursor: pointer;
                 }
             }
         }
@@ -205,21 +241,29 @@
 
             button {
                 width: 100%;
+                height: 35px;
                 background-color: #201568;
                 color: #fff;
                 border: 0;
                 padding: 10px;
-                border-radius: 0.25rem;;
+                border-radius: 0.25rem;
+                cursor: pointer;
+
+                i {
+                    display: inline-block;
+                    width: 24px;
+                    margin-top: -5px;
+                }
             }
             a {
-                width: 35px;
+                width: 45px;
                 height: 35px;
                 border: 1px solid #20156817;
                 border-radius: 0.25rem;
                 margin-left: 15px;
-                padding: 4px;
+                padding: 4px 5px;
 
-                img {
+                i {
                     width: 26px;
                     height: 26px;
                 }
