--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
+@import "animate.css";
+@import "icons.css";
 :root {
-  --font: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  --font: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --primary-color: #009EF7;
+  --error-color: red;
 }
 
 *, ::after, ::before {
