--- a/css/login.css
+++ b/css/login.css
@@ -179,11 +179,18 @@
   font-size: 11px;
   color: var(--error-color);
 }
-#login-entry > div[data-type=sign-in] > .form div input[type=email]:before {
-  content: "";
+#login-entry > div[data-type=sign-in] > .form div input {
+  padding-right: 35px;
+  height: 38px;
+  font-size: 13px;
 }
-#login-entry > div[data-type=sign-in] > .form div input[type=password]:before {
-  content: "";
+#login-entry > div[data-type=sign-in] > .form div i {
+  position: absolute;
+  right: 10px;
+  bottom: 9px;
+  width: 20px;
+  opacity: 0.7;
+  cursor: pointer;
 }
 #login-entry > div[data-type=sign-in] > .form div button {
   font-size: 10px;
@@ -229,6 +236,94 @@
   height: 26px;
 }
 #login-entry > div[data-type=sign-in] > .comment {
+  font-size: 0.6rem;
+  margin-top: 1rem;
+  text-align: justify;
+}
+#login-entry > div[data-type=sign-up] > .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+#login-entry > div[data-type=sign-up] > .info h1 {
+  font-size: 18px;
+  margin: 0;
+  width: 70px;
+}
+#login-entry > div[data-type=sign-up] > .info span {
+  font-size: 11px;
+  color: var(--error-color);
+  width: calc(100% - 70px);
+  text-align: right;
+}
+#login-entry > div[data-type=sign-up] > .form div {
+  font-size: 14px;
+  margin-top: 1rem;
+  position: relative;
+}
+#login-entry > div[data-type=sign-up] > .form div label {
+  display: block;
+  font-weight: 500;
+}
+#login-entry > div[data-type=sign-up] > .form div span {
+  position: absolute;
+  right: 0;
+  font-size: 11px;
+  color: var(--error-color);
+}
+#login-entry > div[data-type=sign-up] > .form div input[type=email]:before {
+  content: "";
+}
+#login-entry > div[data-type=sign-up] > .form div input[type=password]:before {
+  content: "";
+}
+#login-entry > div[data-type=sign-up] > .form div button {
+  font-size: 10px;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  float: right;
+  margin-top: 4px;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+#login-entry > div[data-type=sign-up] > .button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
+}
+#login-entry > div[data-type=sign-up] > .button button {
+  width: 100%;
+  height: 35px;
+  background-color: #201568;
+  color: #fff;
+  border: 0;
+  padding: 10px;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+#login-entry > div[data-type=sign-up] > .button button i {
+  display: inline-block;
+  width: 24px;
+  margin-top: -5px;
+}
+#login-entry > div[data-type=sign-up] > .button a {
+  width: 45px;
+  height: 35px;
+  border: 1px solid #20156817;
+  border-radius: 0.25rem;
+  margin-left: 15px;
+  padding: 4px 5px;
+}
+#login-entry > div[data-type=sign-up] > .button a i {
+  width: 26px;
+  height: 26px;
+}
+#login-entry > div[data-type=sign-up] > .comment {
   font-size: 0.6rem;
   margin-top: 1rem;
   text-align: justify;
