--- a/css/login.scss
+++ b/css/login.scss
@@ -213,6 +213,111 @@
                     color: var(--error-color);
                 }
                 input {
+                    padding-right: 35px;
+                    height: 38px;
+                    font-size: 13px;
+                }
+                i {
+                    position: absolute;
+                    right: 10px;
+                    bottom: 9px;
+                    width: 20px;
+                    opacity: 0.7;
+                    cursor: pointer;
+                }
+                button {
+                    font-size: 10px;
+                    background: transparent;
+                    border: 0;
+                    padding: 0;
+                    float: right;
+                    margin-top: 4px;
+                    color: var(--primary-color);
+                    cursor: pointer;
+                }
+            }
+        }
+        > .button {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 2rem;
+
+            button {
+                width: 100%;
+                height: 35px;
+                background-color: #201568;
+                color: #fff;
+                border: 0;
+                padding: 10px;
+                border-radius: 0.25rem;
+                cursor: pointer;
+
+                i {
+                    display: inline-block;
+                    width: 24px;
+                    margin-top: -5px;
+                }
+            }
+            a {
+                width: 45px;
+                height: 35px;
+                border: 1px solid #20156817;
+                border-radius: 0.25rem;
+                margin-left: 15px;
+                padding: 4px 5px;
+
+                i {
+                    width: 26px;
+                    height: 26px;
+                }
+            }
+        }
+        > .comment {
+            font-size: 0.6rem;
+            margin-top: 1rem;
+            text-align: justify;
+        }
+    }
+
+    > div[data-type="sign-up"] {
+        > .info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0;
+            margin-top: 0;
+            margin-bottom: 30px;
+
+            h1 {
+                font-size: 18px;
+                margin: 0;
+                width: 70px;
+            }
+            span {
+                font-size: 11px;
+                color: var(--error-color);
+                width: calc(100% - 70px);
+                text-align: right;
+            }
+        }
+        > .form {
+            div {
+                font-size: 14px;
+                margin-top: 1rem;
+                position: relative;
+
+                label {
+                    display: block;
+                    font-weight: 500;
+                }
+                span {
+                    position: absolute;
+                    right: 0;
+                    font-size: 11px;
+                    color: var(--error-color);
+                }
+                input {
 
                 }
                 input[type="email"]:before {
